--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "next-intl": "^4.5.8",
     "openai": "^4.83.0",
     "react": "^18",
